<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/itemMenuPesquisar"
        android:icon="@drawable/ic_search_black_18dp"
        android:orderInCategory="100"
        android:title="@string/itemMenuPesquisar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemMenuMeusDados"
        android:orderInCategory="100"
        android:title="@string/menu_opcoes_minha_conta"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemMenuFilhos"
        android:orderInCategory="100"
        android:title="@string/menu_opcoes_filhos"
        app:showAsAction="never" />
</menu>
