<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".telas.geral.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:hint="@string/default_hint_nome" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:hint="@string/default_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:hint="@string/default_hint_senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmacaoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:hint="@string/default_hint_senha_confirmacao"
            android:inputType="textPassword" />

        <RadioGroup
            android:id="@+id/rgTipoPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbResponsavel"
                android:layout_width="@dimen/cadastro_rgtipo_width"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_hint_rb_responsavel" />

            <RadioButton
                android:id="@+id/rbFilho"
                android:layout_width="@dimen/cadastro_rgtipo_width"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_hint_rb_filho" />
        </RadioGroup>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:onClick="onBtnCadastrarClick"
            android:text="@string/cadastro_btn_cadastrar" />
    </LinearLayout>
</ScrollView>
