<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/login_top_pad">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_left_margin"
        android:layout_marginRight="@dimen/default_right_margin"
        android:hint="@string/default_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_left_margin"
        android:layout_marginRight="@dimen/default_right_margin"
        android:hint="@string/default_hint_senha"
        android:inputType="textPassword" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/default_left_margin"
        android:layout_marginRight="@dimen/default_right_margin"
        android:layout_marginHorizontal="@dimen/default_right_margin">

        <TableRow>

            <Button
                android:id="@+id/btnCadastrar"
                android:text="@string/login_btn_cadastrar" />

            <Button
                android:id="@+id/btnLogin"
                android:text="@string/login_btn_login" />
        </TableRow>

    </TableLayout>
</LinearLayout>
